# edgeai_empirical-study

./: .env.example  .gitignore  INSTALL.md  README.md  pyproject.toml
data_analysis/: kappa.py
data_analysis/dataset/: Capabilities.csv  [Empirical_Study]-capabilities.csv  [Empirical_Study]-included_by_criteria.csv  [Empirical_Study]-qual_req.csv  [Empirical_Study]-sa_doc(70).csv
data_analysis/results/: kappa_results.csv
data_analysis/results/tables/: distribution_arch_layers_counts.csv  domains_counts.csv  domains_normalized_long.csv  likert_overview_counts.csv  likert_overview_label_map.csv  likert_overview_percentages.csv  normalized_capabilities_long.csv
data_analysis/scripts/: handle_app_type.py  handle_arch_views.py  handle_capabilities.py  handle_domain.py  multilabel_kappa_iso25010.py  plot_arch_views.py  plot_likert.py
data_analysis/scripts/tables/: column_coverage.csv
data_analysis/tables/: domains_counts.csv
data_collection/: README.md  api_search.py  config.py  data_treatment.py  key-words  utils.py
data_collection/dataset/processed_data/: [CONCATENATED]-raw_data-2025-11-12_15:08:26.csv  [ENGLISH-DESC]_repo-files_2025-11-12_15:09:21.csv  [EXCLUSION-TERM]_repo-files_2025-11-12_15:10:47.csv  [NO-DUPLICATED]_repo-files_2025-11-12_15:09:04.csv
data_collection/dataset/raw_data/: RAW_edge ai architecture_repos_2025-01-19_22:32:38.csv  RAW_edge ai_repos_2025-01-19_22:27:22.csv  RAW_edge architecture_repos_2025-01-19_22:31:56.csv  RAW_edge impulse_repos_2025-01-19_22:30:47.csv  RAW_edge iot_repos_2025-01-20_07:51:17.csv  RAW_edge tpu_repos_2025-01-20_05:19:58.csv  RAW_edge-ai_repos_2025-01-19_21:17:13.csv  RAW_edge-architecture_repos_2025-01-19_22:31:37.csv  RAW_edge-iot_repos_2025-01-19_20:33:55.csv  (+15 more)
survey/scripts/: email_detector.py
thematic_analisys/atlas.ti/: 20250914_code_coocurrrence.xlsx  20250914_code_frequencies.csv  20250914_theme_frequencies.csv
thematic_analisys/atlas.ti_exports/: README.md
thematic_analisys/study_artifacts/: README.md  projects_included_by_criteria.csv
thematic_analysis/atlas.ti_exports/: 20250914_code_coocurrrence.xlsx  20250914_code_list_frequencies.csv  20250914_codebook_full.csv  20250914_quotation_export.csv  README.md
thematic_analysis/study_artifacts/: README.md  all_collected_fragments.csv  codes.csv  fragments_used.csv  fragments→codes.csv  software_architecture_documented_projects.csv  themes.csv
work_sheets/: Architecting EdgeAI-based systems - [Empirical Study].xlsx  README.md  architecting-edgeAI-based-systems.xlsx
(+2 files in other folders)
