[tool.poetry]
name = "edgeai-empirical-study-replication-package"
version = "0.1.0"
description = "Replication package for EdgeAI empirical study"
authors = ["Jander <XXXX@ufba.br>"]
readme = "README.md"
packages = [{ include = "edgeai" }]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.5,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
numpy = ">=2.3.4,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.7,<4.0.0"
langdetect = ">=1.0.9,<2.0.0"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
